First update before release
Fixed a crap ton of things because they were bugged, like even some of the powers were broken, atleast its ready for release now

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,7 +1,7 @@
 name: AsteriaSMP
 author: RRRamiro
-version: 1.0
-main: net.randompvp.asteria.Main
+version: 2.0.1
+main: net.randompvp.asteria.Asteria
 api-version: 1.17
 
 commands:
